# FastAPI

./: README.md  pyproject.toml
src/todos/: main.py
