[project]
name = "todos"
version = "0.1.0"
description = ""
authors = [
    {name = "Babita Kumari",email = "babitakumari.ky3007@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlmodel (>=0.0.24,<0.0.25)"
]

[tool.poetry]
packages = [{include = "todos", from = "src"}]


[tool.poetry.group.dev.dependencies]
uvicorn = {extras = ["standard"], version = "^0.34.0"}

# to run the project add it

[tool.poetry.scripts]
dev = "src.todos.main:start"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
